--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -3,18 +3,18 @@ ip: "192.168.10.10"
 memory: 2048
 cpus: 1
 
-authorize: ~/.ssh/id_rsa.pub
+authorize: ~/.ssh/id_rsa.pub.ref
 
 keys:
     - ~/.ssh/id_rsa
 
 folders:
-    - map: ~/Code
-      to: /home/vagrant/Code
+    - map: ~/Homestead/Code/3mTest
+      to: /home/vagrant/Code/3mTest
 
 sites:
     - map: homestead.app
-      to: /home/vagrant/Code/Laravel/public
+      to: /home/vagrant/Code/3mTest/public
 
 variables:
     - key: APP_ENV
